abstract class for algorithms